# limelight_homework

./: .gitignore  bonus_script  script
bonus_assignment/: Cargo.toml
bonus_assignment/src/: main.rs
domain_info/: Cargo.toml
domain_info/src/: lib.rs  models.rs  process.rs
main_assignment/: Cargo.toml
main_assignment/src/: main.rs
