[package]
name = "domain_info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.4.0"
serde_json = "1.0.79"
serde = { version = "1.0.59", features = ["derive"] }
dns-lookup = "1.0.8"
ssl-expiration = "0.1.2"